welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:1: error: ';' expected but 'return' found.
def sleepIn(weekday:Boolean, vacation:Boolean): Boolean = {if( weekday==true){if (vacation==true){return true}return false}return true} 
                                                                                                              ^sleepIn:1: error: ';' expected but 'return' found.
def sleepIn(weekday:Boolean, vacation:Boolean): Boolean = {if( weekday==true){if (vacation==true){return true}return false}return true} 
                                                                                                                           ^